[gd_scene load_steps=18 format=3 uid="uid://clhn86q7n61p8"]

[ext_resource type="Texture2D" uid="uid://dyludn880arir" path="res://images/Grid.png" id="1_1l46r"]
[ext_resource type="Script" uid="uid://drjyvur5ia5oq" path="res://scripts/shop.gd" id="1_lx5au"]
[ext_resource type="Texture2D" uid="uid://b8tt2gtpbpu03" path="res://images/soul.png" id="1_xfvoa"]
[ext_resource type="Texture2D" uid="uid://bpf0wbofr85sj" path="res://images/Cell.png" id="4_032fp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06t4h"]
size = Vector2(128, 324)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vrkn"]
size = Vector2(139, 339)

[sub_resource type="CircleShape2D" id="CircleShape2D_fu7sn"]

[sub_resource type="Animation" id="Animation_8ln24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_wu84c"]
resource_name = "move"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.6, 0.6), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ln24"]
_data = {
&"RESET": SubResource("Animation_8ln24"),
&"move": SubResource("Animation_wu84c")
}

[sub_resource type="Animation" id="Animation_06t4h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Transision:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Transision/Transision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-679, -2747)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CharacterBody2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_jix8l"]
resource_name = "idle play"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.17075509, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fu7sn"]
resource_name = "out play"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.16493855, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_glbon"]
resource_name = "play"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transision:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transision/Transision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8993718, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-679, -2747), Vector2(-679, -571)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.9666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_scene"
}]
}

[sub_resource type="Animation" id="Animation_7vrkn"]
resource_name = "select play"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.17075509, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lx5au"]
resource_name = "transision"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transision:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transision/Transision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8993718),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-679, -571), Vector2(-679, -2747)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fu7sn"]
_data = {
&"RESET": SubResource("Animation_06t4h"),
&"idle play": SubResource("Animation_jix8l"),
&"out play": SubResource("Animation_fu7sn"),
&"play": SubResource("Animation_glbon"),
&"select play": SubResource("Animation_7vrkn"),
&"transision": SubResource("Animation_lx5au")
}

[node name="Main Menu" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(361.00003, 48)

[node name="Label" type="Label" parent="Node2D"]
offset_left = -216.00003
offset_top = -138.99998
offset_right = 328.99997
offset_bottom = 138.00002
scale = Vector2(0.8672636, 0.8437685)
theme_override_font_sizes/font_size = 100
text = "Back to
Main Menu"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Grid" type="Sprite2D" parent="Node2D"]
z_index = -3
position = Vector2(6.9999695, 278)
scale = Vector2(0.3083333, 0.31111115)
texture = ExtResource("1_1l46r")

[node name="ColorRect" type="ColorRect" parent="Node2D/Grid"]
offset_left = -314.5946
offset_top = -308.5714
offset_right = 314.5946
offset_bottom = 311.78564
color = Color(1, 1, 1, 0.11764706)

[node name="Shop" type="Node2D" parent="."]
position = Vector2(1252, 266)

[node name="Label" type="Label" parent="Shop"]
offset_left = -111.0
offset_top = -240.0
offset_right = 315.0
offset_bottom = 37.0
scale = Vector2(0.8672636, 0.8437685)
theme_override_colors/font_color = Color(0.99999994, 0.22953579, 0.17418489, 1)
theme_override_font_sizes/font_size = 80
text = "Heart"
metadata/_edit_use_anchors_ = true

[node name="price" type="Label" parent="Shop"]
offset_left = -104.0
offset_top = -164.0
offset_right = 322.0
offset_bottom = 113.0
scale = Vector2(0.8672636, 0.8437685)
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
text = "$30"
metadata/_edit_use_anchors_ = true

[node name="heart" type="Node2D" parent="Shop"]
position = Vector2(0, 49)
scale = Vector2(1.5, 1.5)

[node name="Soul" type="Sprite2D" parent="Shop/heart"]
position = Vector2(2.3841858e-07, 7.6293945e-06)
scale = Vector2(0.16457288, 0.16457288)
texture = ExtResource("1_xfvoa")

[node name="Back" type="Button" parent="."]
offset_left = 267.0
offset_top = 469.0
offset_right = 476.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 70
text = "Back"

[node name="back" type="Area2D" parent="Back"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back/back"]
position = Vector2(101, -57)
shape = SubResource("RectangleShape2D_06t4h")

[node name="heart" type="Button" parent="."]
offset_left = 1104.0
offset_top = 469.0
offset_right = 1383.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 70
text = "Heart"

[node name="heart" type="Area2D" parent="heart"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="heart/heart"]
position = Vector2(143.5, -50.5)
shape = SubResource("RectangleShape2D_7vrkn")

[node name="default" type="Node2D" parent="."]
position = Vector2(812, 266)

[node name="Label" type="Label" parent="default"]
offset_left = -111.0
offset_top = -240.0
offset_right = 315.0
offset_bottom = 37.0
scale = Vector2(0.8672636, 0.8437685)
theme_override_font_sizes/font_size = 80
text = "Default"
metadata/_edit_use_anchors_ = true

[node name="default" type="Node2D" parent="default"]
position = Vector2(-1, 46)

[node name="ColorRect" type="ColorRect" parent="default/default"]
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 21.0

[node name="default2" type="Button" parent="."]
offset_left = 667.0
offset_top = 469.0
offset_right = 946.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 70
text = "Default"

[node name="default" type="Area2D" parent="default2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="default2/default"]
position = Vector2(143.5, -50.5)
shape = SubResource("RectangleShape2D_7vrkn")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(371, 761)
script = ExtResource("1_lx5au")

[node name="Area2D" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Area2D"]
shape = SubResource("CircleShape2D_fu7sn")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(-3, -324)
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
&"": SubResource("AnimationLibrary_8ln24")
}

[node name="characters" type="Node2D" parent="CharacterBody2D"]

[node name="default" type="ColorRect" parent="CharacterBody2D/characters"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="Soul" type="Sprite2D" parent="CharacterBody2D/characters"]
visible = false
scale = Vector2(0.2266018, 0.2266018)
texture = ExtResource("1_xfvoa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fu7sn")
}
autoplay = "transision"

[node name="Transision" type="Node2D" parent="."]
z_index = 2

[node name="Transision" type="ColorRect" parent="Transision"]
offset_left = -679.0
offset_top = -2747.0
offset_right = 1377.0
offset_bottom = -506.0
color = Color(0.099985994, 0.099985994, 0.099985994, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="money" type="Label" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 20.0
offset_right = 63.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 50
text = "$ "

[node name="Grids" type="Node2D" parent="."]

[node name="grids2" type="Node2D" parent="Grids"]

[node name="Cell" type="Sprite2D" parent="Grids/grids2"]
z_index = -2
position = Vector2(371, 761.00006)
scale = Vector2(0.072916694, 0.07222216)
texture = ExtResource("4_032fp")

[node name="Cell2" type="Sprite2D" parent="Grids/grids2"]
z_index = -2
position = Vector2(591, 762)
scale = Vector2(0.072916694, 0.07222216)
texture = ExtResource("4_032fp")

[node name="Cell3" type="Sprite2D" parent="Grids/grids2"]
z_index = -2
position = Vector2(812.00006, 762.00006)
scale = Vector2(0.072916694, 0.07222216)
texture = ExtResource("4_032fp")

[node name="Cell4" type="Sprite2D" parent="Grids/grids2"]
z_index = -2
position = Vector2(1031, 761.99994)
scale = Vector2(0.072916694, 0.07222216)
texture = ExtResource("4_032fp")

[node name="Cell5" type="Sprite2D" parent="Grids/grids2"]
z_index = -2
position = Vector2(1252, 762)
scale = Vector2(0.072916694, 0.07222216)
texture = ExtResource("4_032fp")

[node name="grid7" type="Node2D" parent="Grids"]
position = Vector2(371, 762)
scale = Vector2(0.9, 0.9)

[node name="ColorRect2" type="ColorRect" parent="Grids/grid7"]
z_index = -1
offset_left = -38.888893
offset_top = -280.00006
offset_right = 37.777794
offset_bottom = -36.666626
color = Color(0, 0, 0, 0.18431373)
metadata/_edit_use_anchors_ = true

[node name="ColorRect3" type="ColorRect" parent="Grids/grid7"]
z_index = -1
offset_left = 452.22226
offset_top = -280.0
offset_right = 528.8889
offset_bottom = -37.77777
color = Color(0, 0, 0, 0.18431373)
metadata/_edit_use_anchors_ = true

[node name="ColorRect4" type="ColorRect" parent="Grids/grid7"]
z_index = -1
offset_left = 942.2223
offset_top = -280.0
offset_right = 1018.8889
offset_bottom = -37.77777
color = Color(0, 0, 0, 0.18431373)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Grids/grid7"]
offset_left = -38.888885
offset_top = -36.666626
offset_right = 528.8889
offset_bottom = 33.333435
scale = Vector2(1.6766473, 0.93507236)
color = Color(0, 0, 0, 0.18431373)
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="CharacterBody2D" method="_on_animation_player_animation_finished"]
